Added spinners when fetching data and a notification when data is being fetched for a significant amount of time.

--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -82,6 +82,11 @@
             </div>
         </div>
 
+        <div *ngIf="shouldSpinnerWork" class="overlay">
+            <p-progressSpinner styleClass="overlay-spinner"></p-progressSpinner>
+        </div>
+          
+
     </div>
     <app-footer class="footer" id="footer"></app-footer>
 </div>
