Added a banner on the header element.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,6 +4,8 @@
     <i *ngIf="isDarkMode()" class="fa-solid fa-moon"></i>
   </button>
 
+  <img id="banner" src="../../../assets/graphics/banner/dev.png" alt="banner">
+
   <div class="center-buttons">
     <button id="navigationButton" [routerLink]="['/search-articles']" class="btn">search</button>
     <button id="navigationButton" [routerLink]="['/articles']" class="btn">articles</button>
