--- a/src/app/search-articles/search-articles.component.css
+++ b/src/app/search-articles/search-articles.component.css
@@ -20,9 +20,27 @@
 }
 
 #searchForArticlesDiv {
-    margin: 40px 20px 20px 20px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    margin: 40px 20px 20px 20px;
+    align-items: center;
+    padding: .5rem;
+}
+
+#filtersPanel {
+    margin-bottom: .5rem;
+}
+
+#searchInputArea {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+}
+
+#showFiltersLabel {
+    margin-left: 2rem;
+    margin-right: .8rem;
 }
 
 #createNewArticleDiv {
