--- a/src/app/search-articles/search-articles.component.html
+++ b/src/app/search-articles/search-articles.component.html
@@ -1,26 +1,37 @@
 <div id="bodyDiv">
     <app-header class="header"></app-header>
     <div id="contentWrapper">
+
         <div id="searchForArticlesDiv">
 
-            <p-autoComplete 
-                id="searchInputText"
-                placeholder="Search for articles here!"
-                [size]="30"
-                [(ngModel)]="searchPhrase" 
-                [suggestions]="searchSuggestions" 
-                (completeMethod)="searchForAutocompletes($event)"
-                (keydown.enter)="searchForArticles()"
-                 />
+            <div id="filtersPanel" [class.expanded]="showFilters">
+                <div *ngIf="showFilters" class="filter-controls">
+                    <p-dropdown [options]="articleTypes" [(ngModel)]="selectedType" placeholder="Filter by type" />
+                    <p-calendar [(ngModel)]="selectedDateFrom" />
+                    <p-calendar [(ngModel)]="selectedDateTo" />
+                </div>
+                <p-divider type="dashed" />
+            </div>
 
-            <p-button id="searchArticlesButton" icon="pi pi-search" [rounded]="true" [severity]="'secondary'"
-                (onClick)="searchForArticles()" />
+            <div id="searchInputArea">
+                <p-autoComplete id="searchInputText" placeholder="Search for articles here!" [size]="30"
+                    [(ngModel)]="searchPhrase" [suggestions]="searchSuggestions"
+                    (completeMethod)="searchForAutocompletes($event)" (keydown.enter)="searchForArticles()" />
+
+                <p-button id="searchArticlesButton" icon="pi pi-search" [rounded]="true" [severity]="'secondary'"
+                    (onClick)="searchForArticles()" />
+
+                <span id="showFiltersLabel"> filters </span>
+                <p-inputSwitch id="showFiltersSwitch" [(ngModel)]="showFilters" />
+            </div>
+
         </div>
 
         <div *ngIf="isLoggedIn" id="createNewArticleDiv">
             <span>... or create a new one!</span>
 
-            <p-button id="createNewArticleButton" icon="pi pi-arrow-right" [rounded]="true" [severity]="'primary'" [routerLink]="['/new-article']" />
+            <p-button id="createNewArticleButton" icon="pi pi-arrow-right" [rounded]="true" [severity]="'primary'"
+                [routerLink]="['/new-article']" />
         </div>
 
         <div id="searchArticlesContent">
@@ -31,7 +42,7 @@
                 </div>
             </ul>
             <div id="resultsMessageDiv" *ngIf="articlesResults.length === 0">{{ resultsMessage }}</div>
-        </div>  
+        </div>
     </div>
     <app-footer class="footer" id="footer"></app-footer>
 
