--- a/src/app/search-articles/search-articles.component.html
+++ b/src/app/search-articles/search-articles.component.html
@@ -6,9 +6,12 @@
 
             <div id="filtersPanel" [class.expanded]="showFilters">
                 <div *ngIf="showFilters" class="filter-controls">
-                    <p-dropdown [options]="articleTypes" [(ngModel)]="selectedType" placeholder="Filter by type" />
-                    <p-calendar [(ngModel)]="selectedDateFrom" />
-                    <p-calendar [(ngModel)]="selectedDateTo" />
+                    <p-dropdown id="typeFilterDropdown" [options]="articleTypes" [(ngModel)]="selectedType"
+                        placeholder="type" />
+                    <p-calendar id="dateFromFilterCalendar" [(ngModel)]="selectedDateFrom" placeholder="created from" />
+                    -
+                    <p-calendar id="dateToFilterCalendar" [(ngModel)]="selectedDateTo" placeholder="created to" />
+                    <p-chips id="tagsInput" placeholder="add tags (max 5)" [(ngModel)]="selectedTags" [max]="5" />
                 </div>
                 <p-divider type="dashed" />
             </div>
