--- a/src/app/search-articles/search-articles.component.css
+++ b/src/app/search-articles/search-articles.component.css
@@ -30,7 +30,8 @@
 #filtersPanel {
     display: flex;
     flex-direction: row;
-    margin-bottom: .5rem;
+    margin-bottom: .8rem;
+    align-items: center;
 }
 
 #typeFilterDropdown {
@@ -53,11 +54,20 @@
     margin-right: 1rem;
 }
 
+#tagsInput {
+    margin-right: 1rem;
+}
+
+#clearFiltersButton {
+    margin-right: 1rem;
+}
+
 #searchInputArea {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: fit-content;
+    margin-bottom: .7rem;
 }
 
 #showFiltersLabel {
