Added a dialog with credentials for the demo version.

--- a/src/app/shared/login/login.component.css
+++ b/src/app/shared/login/login.component.css
@@ -53,3 +53,11 @@
 #passwordInput {
     margin-bottom: 10px;
 }
+
+#usernameSection {
+    margin-left: 4rem;
+}
+
+#credentialsDialogButton {
+    margin-left: 1rem;
+}
