Added a top padding to the filters switch.

--- a/src/app/search-articles/search-articles.component.css
+++ b/src/app/search-articles/search-articles.component.css
@@ -75,6 +75,10 @@
     margin-right: .8rem;
 }
 
+#showFiltersSwitch {
+    padding-top: .2rem;
+}
+
 #createNewArticleDiv {
     display: flex;
     justify-content: center;
