--- a/src/app/articles/article-details/article-details.component.css
+++ b/src/app/articles/article-details/article-details.component.css
@@ -26,19 +26,19 @@
 }
 /* header/footer wrapper */
 
-#titleDiv {
+#titleDivNonEdit {
     font-size: 300%;
     margin: 40px 40px 40px 40px;
 }
 
-#titleDiv2 {
+#titleDivEdit {
     width: 40%;
     height: auto;
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-#contentDiv {
+#contentDivNonEdit, #contentDivEdit {
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -51,7 +51,7 @@
     border-radius: 20px;
 }
 
-#tagsContainer {
+#tagsDivEdit {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -60,7 +60,7 @@
     margin-bottom: 5px;
 }
 
-#tags {
+#tagsDivNonEdit {
     margin-top: 5px;
     margin-bottom: 5px;
     width: auto;
@@ -79,7 +79,7 @@ label {
     margin-right: 13px;
 }
 
-#typeContainer {
+#typeDiv {
     width: 40%;
     margin-top: 4px;
 }
