--- a/src/app/search-articles/search-articles.component.html
+++ b/src/app/search-articles/search-articles.component.html
@@ -5,7 +5,7 @@
         <div id="searchForArticlesDiv">
 
             <div id="searchInputArea">
-                <p-autoComplete id="searchInputText" placeholder="Search for articles here!" [size]="30"
+                <p-autoComplete id="searchInputText" placeholder="Search for articles here!"
                     [(ngModel)]="selectedPhrase" [suggestions]="autocompleteSuggestions"
                     (completeMethod)="searchForAutocompletes($event)" (keydown.enter)="searchForArticles(this.pageNumber, this.pageSize)" />
 
