--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,41 +1,34 @@
 <div id="headerDiv">
-  <button (click)="toggleTheme()" class="theme-toggle">
-    <i *ngIf="!isDarkMode()" class="fa-solid fa-sun"></i>
-    <i *ngIf="isDarkMode()" class="fa-solid fa-moon"></i>
+  <button (click)="toggleTheme()" class="theme-toggle" [attr.aria-label]="themeLabel()" [title]="themeLabel()">
+    <i [class]="themeIcon()"></i>
   </button>
 
-  <div *ngIf="bannerImagePath">
-    <img id="banner" [src]="bannerImagePath" alt="banner" />
+  <div>
+    <img id="banner" [src]="bannerConfig()?.path" [alt]="bannerConfig()?.alt" loading="lazy" />
   </div>
 
   <div class="center-buttons">
-    <button id="navigationButton" [routerLink]="['/search-articles']" class="btn">search</button>
-    <button id="navigationButton" [routerLink]="['/articles']" class="btn">articles</button>
+    <button id="navigationButton" [routerLink]="['/search-articles']" class="btn" aria-label="Search Articles">
+      search
+    </button>
+    <button id="navigationButton" [routerLink]="['/articles']" class="btn" aria-label="View Articles">
+      articles
+    </button>
   </div>
 
-  <div *ngIf="isLoggedIn">
-    <p-button id="settingsButton" [routerLink]="['/settings']" icon="pi pi-sliders-h" label="" [severity]="'secondary'"
-      class="btn" [style]="{'height': '35px', 'margin': '5px 5px 5px 5px'}" />
+  <div class="user-actions" *ngIf="isLoggedIn()">
+    <p-button id="settingsButton" [routerLink]="['/settings']" icon="pi pi-sliders-h" [severity]="'secondary'"
+      class="btn action-btn" pTooltip="Settings" tooltipPosition="bottom" [style]="{'height': '35px', 'margin': '5px'}"
+      aria-label="Settings" />
+
+    <p-button id="logoutButton" icon="pi pi-sign-out" label="log out" (onClick)="logout()" [severity]="'secondary'"
+      class="btn action-btn" [style]="{'height': '35px', 'margin': '5px'}" aria-label="Log Out" />
+
   </div>
 
-  <div *ngIf="!isLoggedIn">
-    <p-button 
-      id="loginButton" 
-      [routerLink]="['/login']" 
-      icon="pi pi-sign-in" 
-      label="log in" 
-      [severity]="'secondary'"
-      class="btn" [style]="{'height': '35px', 'margin': '5px 5px 5px 5px'}" />
-  </div>
-
-  <div *ngIf="isLoggedIn">
-    <p-button 
-      id="logoutButton" 
-      icon="pi pi-sign-out" 
-      label="log out" 
-      (onClick)="logout()"  
-      [severity]="'secondary'" class="btn" [style]="{'height': '35px', 'margin': '5px 5px 5px 5px'}" 
-      />
+  <div class="user-actions" *ngIf="!isLoggedIn()">
+    <p-button id="loginButton" [routerLink]="['/login']" icon="pi pi-sign-in" label="log in" [severity]="'secondary'"
+      class="btn action-btn" [style]="{'height': '35px', 'margin': '5px'}" aria-label="Log In" />
   </div>
 
 </div>
