Deleted overriding styles for the articles items so the dark mode can work with PrimeNG and changed the hover effect.

--- a/src/app/articles/all-articles-item/all-articles-item.component.html
+++ b/src/app/articles/all-articles-item/all-articles-item.component.html
@@ -1,5 +1,5 @@
-<div id="resultItem" [class.hovered]="isHovered">
-    <p-card id="card" [style]="getCurrentStyle()" header="{{article?.title}}">
+<div id="resultItem">
+    <p-card id="card" header="{{article?.title}}">
         <div id="innerCard">
             
             <a id="type">Type: {{ getFormattedType() }}</a>
