--- a/src/app/search-articles/search-result-item/search-result-item.component.html
+++ b/src/app/search-articles/search-result-item/search-result-item.component.html
@@ -1,6 +1,6 @@
 
-<div id="resultItem" [class.hovered]="isHovered">
-    <p-card id="card" [style]="getCurrentStyle()" header="{{article?.title}}">
+<div id="resultItem">
+    <p-card id="card" class="articles-item" header="{{article?.title}}">
         <div id="innerCard">
             <a>Type: {{article?.type}}</a>
 
