--- a/src/app/articles/all-articles-item/all-articles-item.component.css
+++ b/src/app/articles/all-articles-item/all-articles-item.component.css
@@ -32,3 +32,14 @@ div {
     margin-bottom: 1px;
     margin-top: 1px;
 }
+
+#resultItem {
+    border: 3px solid #d4deea; 
+    border-radius: 13px;
+    transition: border-color 0.3s ease;
+}
+
+#resultItem:hover {
+    border: 3px solid #9cec94; 
+    border-radius: 13px; 
+}
