--- a/src/app/search-articles/search-result-item/search-result-item.component.css
+++ b/src/app/search-articles/search-result-item/search-result-item.component.css
@@ -24,5 +24,15 @@ div {
     font-size: 15px;
     margin-bottom: -10px;
     margin-top: -10px;
+}
 
+#resultItem {
+    border: 3px solid #d4deea; 
+    border-radius: 13px;
+    transition: border-color 0.3s ease;
+}
+
+#resultItem:hover {
+    border: 3px solid #9cec94; 
+    border-radius: 13px; 
 }
