Fixed footer icons.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,10 @@
 <div>
+    <a href="https://linkedin.com/in/krzysztof-plociennik" target="_blank" rel="noopener noreferrer">
+        <p-button icon="pi pi-linkedin" [rounded]="true" severity="secondary" />
+    </a>
 
-    <a id="links-button" href="https://linkedin.com/in/krzysztof-plociennik" target="_blank" rel="noopener noreferrer" class="p-button pi pi-linkedin"></a>
-    <a id="links-button" href="https://github.com/krzysztofplociennik" target="_blank" rel="noopener noreferrer" class="p-button pi pi-github"></a>
+    <a href="https://github.com/krzysztofplociennik" target="_blank" rel="noopener noreferrer">
+        <p-button icon="pi pi-github" [rounded]="true" severity="secondary" />
+    </a>
 
 </div>
