--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,29 +1,11 @@
 div {
     background: #324a68;
-    margin: 1px 1px 1px 1px;
+    margin-top: 1rem;
+    padding: 1rem;
     display: flex;
     justify-content: center;
 }
 
 a {
-    margin: 20px 11px 20px 11px;
-}
-
-#links-button {
-    border-radius: 80%;
-    border: 0cap;
-    background-color: rgb(141, 141, 141);
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 0;
-}
-
-#links-button .pi {
-    margin: 0px;
-    font-size: 44px;
-
+    margin-left: 1rem;
 }
