Fixed the banner not showing up.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
   </button>
 
   <div>
-    <img id="banner" [src]="bannerConfig()?.path" [alt]="bannerConfig()?.alt" loading="lazy" />
+    <img id="banner" [src]="getBannerPath()" />
   </div>
 
   <div class="center-buttons">
