--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -26,10 +26,10 @@
         </div>
 
         <div id="typeDiv" *ngIf="isEditMode">
-            <p-floatlabel> 
-                            <label id="typeLabel"> Type: </label>
-            <p-dropdown *ngIf="areArticleTypesPopulated()" id="articleTypesDropdown" [options]="articleTypes"
-                [(ngModel)]="editedArticle.type" optionLabel="name" placeholder="Select the new type" />
+            <p-floatlabel>
+                <label id="typeLabel"> Type: </label>
+                <p-dropdown *ngIf="areArticleTypesPopulated()" id="articleTypesDropdown" [options]="articleTypes"
+                    [(ngModel)]="editedArticle.type" optionLabel="name" placeholder="Select the new type" />
             </p-floatlabel>
         </div>
 
@@ -46,15 +46,18 @@
         </div>
         <div id="tagsDivEdit" *ngIf="isEditMode">
             <p-floatLabel>
-                            <label> Tags: </label>
-            <div>
-                <p-chips [(ngModel)]="editedArticle.tags" [separator]="','" placeholder="Add tags"></p-chips>
-            </div>
+                <label> Tags: </label>
+                <div>
+                    <p-chips [(ngModel)]="editedArticle.tags" [separator]="','" placeholder="Add tags"></p-chips>
+                </div>
             </p-floatLabel>
         </div>
 
+        <!-- Replace your contentOutline div with this simpler version: -->
         <div id="contentOutline">
-            <div id="contentDivNonEdit" *ngIf="!isEditMode" [innerHTML]="article?.content"></div>
+            <div id="contentDivNonEdit" *ngIf="!isEditMode" #contentContainer>
+                <div [innerHTML]="processedContent"></div>
+            </div>
             <div id="contentDivEdit" *ngIf="isEditMode">
                 <p-editor id="editor" placeholder="Write your content here!" [(ngModel)]="editedArticle.content"
                     [style]="{ height: 'auto', width: 'auto' }" />
