--- a/src/app/shared/login/login.component.css
+++ b/src/app/shared/login/login.component.css
@@ -42,14 +42,16 @@
 }
 
 #usernameInput {
-    margin-bottom: 5px;
+    margin-bottom: .4rem;
+
 }
 
 #passwordLabel {
-    margin-right: 20px;
-    margin-left: 3px;
+    margin-left: .3rem;
+
 }
 
 #passwordInput {
-    margin-bottom: 10px;
+    margin-left: 1.2rem;
+    margin-bottom: 1rem;
 }
