--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -33,7 +33,8 @@
           [multiple]="true" 
           accept=".txt" 
           maxFileSize="1000000" 
-          mode="advanced">
+          mode="advanced"
+          [files]="uploadedFiles">
   
           <ng-template #empty>
             <div>Drag and drop files to here to upload.</div>
