Adding articles sorting, part 1

--- a/src/app/search-articles/search-articles.component.css
+++ b/src/app/search-articles/search-articles.component.css
@@ -104,3 +104,11 @@
 #resultsMessageDiv {
     text-align: center;
 }
+
+#sortingTypesDropdown {
+    margin-left: 1rem;
+}
+
+#applySortButton {
+    margin-left: 1rem;
+}
